# Django-RealWorld

./: README.md
api/: conduit_new.postman_collection.json
backend/: .env.example  .gitignore  pyproject.toml
backend/articles/: models.py  relations.py  serializers.py  signals.py  urls.py  views.py
backend/articles/migrations/: 0001_initial.py  0002_initial.py
backend/comments/: models.py  serializers.py  urls.py  views.py
backend/comments/migrations/: 0001_initial.py
backend/conduit/: settings.py  urls.py
backend/config/: settings.py  urls.py
backend/core/: models.py  utils.py
backend/myauth/: apps.py  authentication.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/myauth/migrations/: 0001_initial.py  0002_remove_user_bio_remove_user_image.py
backend/profiles/: models.py  serializers.py  urls.py  views.py
backend/profiles/migrations/: 0001_initial.py
backend/tags/: models.py  serializers.py  urls.py  views.py
backend/tags/migrations/: 0001_initial.py
frontend/src/: agent.js  middleware.js
frontend/src/components/: App.js  Editor.js  Settings.js
frontend/src/reducers/: common.js  editor.js
